--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,16 @@
 	<nav th:replace="fragments/nav" />
 
 	<div class="container" style="text-align: center">
-		<h2>Sistema de gestión de incidencias</h2>
+		<h2>Sistema de gestion de incidencias</h2>
+	</div>
+
+	<div class="panel panel-info">
+		<div class="panel-heading">
+			<h3 class="panel-title">Visualizar incidencias asignadas</h3>
+		</div>
+		<div class="panel-body">Para visualizar las incidencias que ha
+			enviado haga click en 'Incidencias asignadas' en la barra de
+			navegacion.</div>
 	</div>
 
 	<footer th:replace="fragments/footer" />
