--- a/src/main/resources/templates/incidences/listIncidences.html
+++ b/src/main/resources/templates/incidences/listIncidences.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head th:replace="fragments/head" />
 <body>
-	<!-- Barra de Navegación superior -->
+	<!-- Barra de Navegacon superior -->
 	<nav th:replace="fragments/nav" />
 	<div class="container">
-		<p>Incidencias</p>
+		<p>Incidencias asignadas</p>
 		<div class="table-responsive">
 			<table class="table table-hover" id="myTable">
 				<thead>
 					<tr>
-						<th th:text="ID"></th>
+						<th th:text="Nombre"></th>
 						<th th:text="Descripcion"></th>
 						<th th:text="Localizacion"></th>
 						<th th:text="Estado"></th>
@@ -21,7 +21,7 @@
 				</thead>
 				<tbody>
 					<tr th:each="incidence : ${incidencesList}">
-						<td th:text="${incidence.id}"></td>
+						<td th:text="${incidence.nombre}"></td>
 						<td th:text="${incidence.descripcion}"></td>
 						<td th:text="${incidence.localizacion.getLatitude()} + ' ; ' + ${incidence.localizacion.getLongitud()}"></td>
 						<td th:text="${incidence.estado}"></td>
@@ -34,14 +34,16 @@
 		</div>
 	</div>
 	
-	<script th:inline="javascript">
-  	  /*<![CDATA[*/
-	  	var evtSource = new EventSource("/getEmitter");
-	  	evtSource.onmessage = function(e) {
-	  		var obj = JSON.parse(e.data);
-	  		$("#myTable").find('tbody').append( "<tr><td>" + obj.id + "</td><td>" + obj.descripcion + "</td><td>" + obj.localizacion + "</td></tr>" );
-	  	}
-	  /*]]>*/
-  </script> 
+<!-- 	<script th:inline="javascript"> 
+   	  /*<![CDATA[*/
+ 	  	var evtSource = new EventSource("/getEmitter");
+ 	  	evtSource.onmessage = function(e) {
+ 	  		var obj = JSON.parse(e.data);
+ 	  		$("#myTable").find('tbody').append( "<tr><td>" + obj.id + "</td><td>" + obj.descripcion + "</td><td>" + obj.localizacion + "</td></tr>" );
+ 	  	}
+ 	  /*]]>*/
+  </script> -->
+  
+  <script src="/js/actualizaIncidencias.js"></script>
 </body>
 </html>
