--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,9 +5,6 @@
 	<nav th:replace="fragments/nav" />
 	<div class="container">
 		<h2>Login</h2>
-		<!-- Si falla el login, muestra el siguiente mensaje -->
-		<span class="errorLogin" th:if="${param.error}"
-			th:text="#{Error.login.message}"></span>
 		<form class="form-horizontal" method="post" action="/login">
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="username">Username</label>
@@ -19,7 +16,8 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="password">Password</label>
 				<div class="col-sm-10">
-					<input type="password" class="form-control" name="password" required="true" />
+					<input type="password" class="form-control" name="password"
+						required="true" />
 				</div>
 			</div>
 			<div class="form-group">
