--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -11,7 +11,10 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
 				<li><a href="/home">Home</a></li>
-				<li><a href="/incidence/sent"> <span
+				<li><a href="/currentIncidents"> <span
+						name="currentIncidents" class="glyphicon glyphicon-user"></span>Incidencias actuales
+				</a></li>
+				<li><a href="/assignedIncidents"> <span
 						name="assignedIncidents" class="glyphicon glyphicon-user"></span>Incidencias asignadas
 				</a></li>
 			</ul>
