--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,15 +7,25 @@
 
 	<div class="container" style="text-align: center">
 		<h2>Sistema de gestion de incidencias</h2>
-	</div>
 
-	<div class="panel panel-info">
-		<div class="panel-heading">
-			<h3 class="panel-title">Visualizar incidencias asignadas</h3>
+		<div class="panel panel-info" sec:authorize="isAuthenticated()">
+			<div class="panel-heading">
+				<h3 class="panel-title">Visualizar incidencias actuales</h3>
+			</div>
+			<div class="panel-body">Para visualizar las incidencias en
+				tiempo real haga click en 'Incidencias actuales' en la barra de
+				navegacion.</div>
 		</div>
-		<div class="panel-body">Para visualizar las incidencias que ha
-			enviado haga click en 'Incidencias asignadas' en la barra de
-			navegacion.</div>
+		<br>
+		<div class="panel panel-info" sec:authorize="isAuthenticated()">
+			<div class="panel-heading">
+				<h3 class="panel-title">Visualizar incidencias asignadas</h3>
+			</div>
+			<div class="panel-body">Para visualizar las incidencias que ha
+				enviado haga click en 'Incidencias asignadas' en la barra de
+				navegacion.</div>
+		</div>
+
 	</div>
 
 	<footer th:replace="fragments/footer" />
