--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 				<label class="control-label col-sm-2" for="username">Username</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="username"
-						placeholder="admin" required="true" />
+						placeholder="09847514P" required="true" />
 				</div>
 			</div>
 			<div class="form-group">
