--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -9,10 +9,10 @@
 		<form class="form-horizontal" method="post" action="/signup"
 			th:object="${ims}">
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="name">Name:</label>
+				<label class="control-label col-sm-2" for="nombre">Name:</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" name="name" placeholder="Juan" required="true" /> 
-					<span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" />
+					<input type="text" class="form-control" name="nombre" placeholder="Juan" required="true" /> 
+					<span class="text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" />
 				</div>
 			</div>
 			<div class="form-group">
@@ -23,10 +23,10 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="identifier">Identifier:</label>
+				<label class="control-label col-sm-2" for="identificador">Identifier:</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" name="identifier" placeholder="99999999Y" required="true" /> 
-					<span class="text-danger" th:if="${#fields.hasErrors('identifier')}" th:errors="*{identifier}">
+					<input type="text" class="form-control" name="identificador" placeholder="99999999Y" required="true" /> 
+					<span class="text-danger" th:if="${#fields.hasErrors('identificador')}" th:errors="*{identificador}">
 				</div>
 			</div>
 			<div class="form-group">
