--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -18,7 +18,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="email">Email:</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" name="email" placeholder="juan@gmail.com" required="true" /> 
+					<input type="email" class="form-control" name="email" placeholder="juan@gmail.com" required="true" /> 
 					<span class="text-danger" th:if="${#fields.hasErrors('email')}"	th:errors="*{email}" />
 				</div>
 			</div>
